# xRenderEngine

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  deny.toml  skills-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: atlas_generic.rs
crates/xre/: Cargo.toml  README.md
crates/xre-cello/: Cargo.toml
crates/xre-cello/src/: controllers.rs  lib.rs  obj.rs  scene.rs  texture.rs  triangulate.rs
crates/xre-core/: Cargo.toml
crates/xre-core/src/: cell.rs  color.rs  error.rs  geometry.rs  lib.rs  math.rs  oklab.rs
crates/xre-engine/: Cargo.toml
crates/xre-engine/benches/: raycaster.rs
crates/xre-engine/examples/: rift_fps.rs
crates/xre-engine/src/: anim.rs  collide.rs  ecs.rs  input_map.rs  latch.rs  lib.rs  raycaster.rs  time.rs
crates/xre-engine/tests/: latch_hold.rs  raycaster_determinism.rs  raycaster_golden.rs  raycaster_zero_alloc.rs
crates/xre-engine/tests/snapshots/: raycaster_golden__raycast_frame.snap
crates/xre-render/: Cargo.toml
crates/xre-render/benches/: pipeline.rs
crates/xre-render/src/: camera.rs  clip.rs  density.rs  lib.rs  light.rs  material.rs  mesh.rs  raster.rs  sample.rs  settings.rs  shader.rs  shape.rs
crates/xre-render/tests/: golden_frames.rs  zero_alloc.rs
crates/xre-render/tests/snapshots/: golden_frames__lit_cube_per_sample.snap  golden_frames__lit_sphere_per_sample.snap  golden_frames__lit_torus_flat.snap
crates/xre-term/: Cargo.toml
crates/xre-term/examples/: terminal_spike.rs
crates/xre-term/src/: capabilities.rs  error.rs  events.rs  guard.rs  lib.rs  presenter.rs
crates/xre-tui/: Cargo.toml
crates/xre-tui/examples/: dashboard.rs  spinning_cube.rs
crates/xre-tui/src/: focus.rs  frame.rs  layout.rs  lib.rs  mouse.rs  panel.rs  theme.rs  viewport.rs  widget.rs
crates/xre-tui/src/widgets/: gauge.rs  input.rs  list.rs  log.rs  mod.rs  scrollbar.rs  spinner.rs  table.rs  tabs.rs  text.rs
crates/xre-tui/tests/: scrollbar_golden.rs  tab_click.rs
crates/xre-tui/tests/snapshots/: scrollbar_golden__vertical_scrollbar_full_when_content_fits.snap  scrollbar_golden__vertical_scrollbar_positions.snap
crates/xre/src/: lib.rs
docs/: terminal-notes.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  cell-shaders.md  cli.md  game-loop.md  glyphgen.md  introduction.md  quickstart.md  rendering.md  scenes.md  terminals.md  tui.md
tools/glyphgen/: Cargo.toml
tools/glyphgen/src/: lib.rs  main.rs
tools/xre-cli/: Cargo.toml
tools/xre-cli/src/: bench.rs  main.rs  scaffold.rs  view.rs
