[package]
name = "xre-cello"
description = "Scene management for xRenderEngine: scene graph, mesh, camera, lights, materials, animation, OBJ/MTL."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["3d", "obj", "scene", "mesh", "loader"]
categories = ["rendering", "game-development"]

[lints]
workspace = true

[dependencies]
xre-core = { path = "../xre-core", version = "0.1.0" }
xre-render = { path = "../xre-render", version = "0.1.0" }
glam = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
