[package]
name = "xre-core"
description = "Core types for xRenderEngine: math re-exports, Color, Cell, geometry, errors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["terminal", "3d", "color", "geometry", "oklab"]
categories = ["rendering::data-formats", "mathematics"]

[lints]
workspace = true

[dependencies]
glam = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
