[package]
name = "xre-engine"
description = "Application layer for xRenderEngine: game loop, time, input mapping, ECS (hecs), asset manager."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["game-engine", "ecs", "terminal", "3d", "gamedev"]
categories = ["game-engines", "game-development"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = []
grid-raycaster = []

[dependencies]
xre-core = { path = "../xre-core", version = "0.0.1" }
xre-render = { path = "../xre-render", version = "0.0.1" }
xre-cello = { path = "../xre-cello", version = "0.0.1" }
xre-term = { path = "../xre-term", version = "0.0.1" }
hecs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
xre-tui = { path = "../xre-tui", version = "0.0.1" }

[[example]]
name = "rift-fps"
path = "examples/rift_fps.rs"
required-features = ["grid-raycaster"]
