[package]
# Published as `xre-rs` because the `xre` name is taken on crates.io by an
# unrelated crate. The library target keeps the name `xre` (see `[lib]` below),
# so downstream code still writes `use xre::…` after `xre-rs = "0.1.0"`.
name = "xre-rs"
description = "xRenderEngine facade crate: re-exports, prelude, and feature-flag coordination."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["terminal", "ascii", "3d", "game-engine", "tui"]
categories = ["rendering::engine", "game-engines", "command-line-interface"]

[lib]
name = "xre"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
xre-core = { path = "../xre-core", version = "0.2.0" }
xre-term = { path = "../xre-term", version = "0.2.0" }
xre-tui = { path = "../xre-tui", version = "0.2.0" }
xre-render = { path = "../xre-render", version = "0.2.0" }
xre-cello = { path = "../xre-cello", version = "0.2.0" }
xre-engine = { path = "../xre-engine", version = "0.2.0" }

[features]
# Feature flags per RiftEngine-Plan/02-architecture.md §10. Inert in the skeleton;
# they gate real functionality as the lower crates are implemented.
default = ["mesh", "tui", "shape-shader", "parallel"]
mesh = []
tui = []
shape-shader = []
grid-raycaster = []
voxel = []
legacy-windows = []
hot-reload = []
braille = []
# Row-parallel rendering (Stage 4.5), default-on. Forwards to the renderer and the
# Viewport3D path. The canonical *serial* build is `-p xre-render --no-default-features`;
# the facade's prelude hard-references render symbols, so the facade itself is not
# meant to be built without default features.
parallel = ["xre-render/parallel", "xre-tui/parallel"]
