[package]
name = "xre-cli"
description = "xRenderEngine command-line tool: scaffold projects, view OBJ models, run benches, calibrate fonts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["terminal", "ascii", "3d", "renderer", "cli"]
categories = ["command-line-utilities", "rendering"]

[lints]
workspace = true

[[bin]]
name = "xre"
path = "src/main.rs"

[features]
# Row-parallel rendering, default-on; forwards to the facade. Build with
# `--no-default-features` for a single-core `xre` binary.
default = ["parallel"]
parallel = ["xre-rs/parallel"]

[dependencies]
glyphgen = { path = "../glyphgen", version = "0.2.0" }
# Facade is published as `xre-rs`; its library target is named `xre`, so the
# source keeps using `xre::…`.
xre-rs = { path = "../../crates/xre", version = "0.2.0", default-features = false }
